# wraith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: AGENTS.md  DETECTION.md  PLAYBOOK.md
examples/: borrow_session.py  detect_waap.py  score_check.py
tests/: test_agent.py  test_agent_ergonomics.py  test_challenge.py  test_challenge_solver.py  test_clear_challenge.py  test_fastpath.py  test_mcp.py  test_mcp_tabs_batch4.py  test_providers.py  test_proxy.py  test_recaptcha.py  test_recaptcha_v3.py  test_selftest.py  test_smoke.py  test_waap_coverage.py
wraith/: __init__.py  agent.py  behavior.py  cli.py  detect.py  engine.py  fastpath.py  harvest.py  identity.py  mcp.py  providers.py  proxy.py  recaptcha.py  recaptcha_v3.py  snapshot.py
