[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wraith"
version = "0.1.0"
description = "A stealth, identity-borrowing, MCP-native agent browser (Camoufox/Playwright)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yogev Kr" }]
keywords = [
    "stealth-browser",
    "anti-detect",
    "playwright",
    "camoufox",
    "mcp",
    "web-automation",
    "agent",
    "bot-detection",
    "residential-proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "camoufox[geoip]",
    "playwright==1.55.0",
    "patchright",
    "httpx",
    "mcp",
    "markdownify",
]

[project.urls]
Homepage = "https://github.com/YogevKr/wraith"
Repository = "https://github.com/YogevKr/wraith"
Issues = "https://github.com/YogevKr/wraith/issues"

[project.optional-dependencies]
# Browser binaries (camoufox Firefox, patchright Chromium) are runtime installs,
# not pip deps:  `camoufox fetch`  and  `patchright install chromium`.
# The no-browser TLS-impersonation fast path (wraith.fastpath) needs curl_cffi.
fastpath = ["curl_cffi>=0.7"]
dev = ["pytest", "ruff", "curl_cffi>=0.7"]

[dependency-groups]
dev = ["pytest", "ruff", "curl_cffi>=0.7"]

[project.scripts]
wraith = "wraith.cli:main"
wraith-mcp = "wraith.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["wraith"]
